[package]
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]
description = "A Doom Renderer/Level Viewer written in Rust."
name = "rs_doom"
version = "0.0.9"
edition = "2018"

[[bin]]
name = "rs_doom"

[dependencies]
wad = { path = "wad" }
engine = { path = "engine" }
game = { path = "game" }
math = { path = "math" }

env_logger = "0.6.1"
error-chain = "0.12.0"
time = "0.1.35"
structopt = "0.2.15"

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4.3"

[workspace]


