[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
name = "engine"
version = "0.1.0"
edition = "2018"

[dependencies]
math = { path = "../math" }
engine_derive = { path = "../engine_derive" }

glium-typed-buffer-any = "0.6.0"
idcontain = "0.7.6"
num-traits = "0.2.14"
rusttype = "0.9.2"
unicode-normalization = "0.1.17"
failure = "0.1.8"
failchain = "0.1018.2"

[dependencies.log]
features = ["release_max_level_info"]
version = "0.4.14"

[dependencies.glium]
features = ["glutin"]
version = "0.26"

[dev-dependencies]
env_logger = "*"
