[package]
name = "wad"
version = "0.1.0"
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
edition = "2018"

[dependencies]
math = { path = "../math" }

bincode = "1.3.2"
log = "0.4.14"
regex = "1.4.5"
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
vec_map = "0.8.2"
indexmap = "1.6.2"
failchain = "0.1018.2"
failure = "0.1.8"
byteorder = "1.3"
