[package]
name = "game"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "game"
path = "lib.rs"

[dependencies.gfx]
path = "../gfx"

[dependencies.gl]
path = "../gl"

[dependencies.math]
path = "../math"

[dependencies.wad]
path = "../wad"

[dependencies]
sdl2 = "*"
log = "*"
time = "*"
env_logger = "*"
libc = "*"
getopts = "*"
num = "*"
