[package]
name = "game"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "game"
path = "lib.rs"

[dependencies.gfx]
path = "../gfx"

[dependencies.math]
path = "../math"

[dependencies.wad]
path = "../wad"

[dependencies.common]
path = "../common"

[dependencies]
sdl2 = "0.12.1"
log = "0.3.4"
time = "0.1.34"
num = "0.1.29"
