[package]
name = "gfx"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "gfx"
path = "lib.rs"

[dependencies.math]
path = "../math"

[dependencies.common]
path = "../common"

[dependencies]
glium = "*"
glium_sdl2 = "*"
lazy_static = "*"
libc = "*"
log = "*"
sdl2 = "*"
sdl2_ttf = "*"
slab = "*"
