[package]
name = "gfx"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "gfx"
path = "lib.rs"

[dependencies.math]
path = "../math"

[dependencies.common]
path = "../common"

[dependencies]
glium = "0.12.4"
glium_sdl2 = "0.9.0"
lazy_static = "0.1.15"
libc = "0.2.3"
log = "0.3.4"
sdl2 = "0.12.1"
sdl2_ttf = "0.10.0"
slab = "0.1.3"
