[package]
name = "gfx"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "gfx"
path = "lib.rs"

[dependencies.math]
path = "../math"

[dependencies.common]
path = "../common"

[dependencies]
lazy_static = "0.1.15"
libc = "0.2.3"
log = "0.3.4"
slab = "0.1.3"

[dependencies.sdl2]
path = "../shims/sdl2"

[dependencies.sdl2_ttf]
path = "../shims/sdl2_ttf"

[dependencies.glium_sdl2]
path = "../shims/glium_sdl2"

[dependencies.glium]
path = "../shims/glium"
