[package]
name = "gl"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]
build = "build.rs"

[lib]
name = "gl"
path = "lib.rs"

[build-dependencies.gl_generator]
git = "https://github.com/bjz/gl-rs"

[build-dependencies.khronos_api]
git = "https://github.com/bjz/gl-rs.git"

[dependencies.gl_common]
git = "https://github.com/bjz/gl-rs.git"
