[package]
name = "wad"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "wad"
path = "lib.rs"

[dependencies.common]
path = "../common"

[dependencies.gfx]
path = "../gfx"

[dependencies.gl]
path = "../gl"

[dependencies.math]
path = "../math"

[dependencies]
toml = "*"
time = "*"
rustc-serialize = "*"
log = "*"
regex = "*"
num = "*"
sdl2 = "*"
bincode = "*"
byteorder = "*"
