[package]
name = "wad"
version = "0.0.1"
authors = ["Cristian Cobzarenco <cristi.cobzarenco@gmail.com>"]

[lib]
name = "wad"
path = "lib.rs"

[dependencies.common]
path = "../common"

[dependencies.gfx]
path = "../gfx"

[dependencies.math]
path = "../math"

[dependencies]
toml = "0.1.24"
time = "0.1.34"
rustc-serialize = "0.3.16"
log = "0.3.4"
regex = "0.1.43"
num = "0.1.29"
byteorder = "0.4.2"
vec_map = "0.4.0"

[dependencies.sdl2]
path = "../shims/sdl2"
